[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.1", features = ["ws", "json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
hyper = { version = "1.1", features = ["full"] }

# Runtime & async
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"

# Serialization & data handling
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
csv = "1.3"

# Logging & error handling
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3.9"