[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr", "nightly"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

# Web dependencies
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
js-sys = "0.3"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", 
    "HtmlTextAreaElement", 
    "HtmlSelectElement", 
    "Event", 
    "EventTarget"
]}
gloo-timers = "0.3"
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"